delete review repro

--- a/CommonWebParts/CommonWebParts.csproj
+++ b/CommonWebParts/CommonWebParts.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExampleDatabase\ExampleDatabase.csproj" />
   </ItemGroup>
 
